# guile-taglib

./: .gitignore  Makefile.am  configure.ac  env.in  guile-taglib.pc.in
guile-taglib/: Makefile.am  helpers.cxx  helpers.h  includes.i
guile-taglib/base/: base.i
guile-taglib/flac/: flac.i
taglib/: Makefile.am  config.scm.in
